@@ -193,19 +193,13 @@ class User(ModelSQL, ModelView):
                     val['password'] = 'x' * 10
         return res
 
-    def search_rec_name(self, cursor, user, name, args, context=None):
-        args2 = []
-        i = 0
-        while i < len(args):
-            ids = self.search(cursor, user, [
-                ('login', '=', args[i][2]),
-                ], context=context)
-            if len(ids) == 1:
-                args2.append(('id', '=', ids[0]))
-            else:
-                args2.append((self._rec_name, args[i][1], args[i][2]))
-            i += 1
-        return args2
+    def search_rec_name(self, cursor, user, name, clause, context=None):
+        ids = self.search(cursor, user, [
+            ('login', '=', clause[2]),
+            ], order=[], context=context)
+        if len(ids) == 1:
+            return [('id', '=', ids[0])]
+        return [(self._rec_name,) + clause[1:]]
 
     def copy(self, cursor, user, ids, default=None, context=None):
         if default is None:
